--- a/src/main/resources/templates/products/edit.html
+++ b/src/main/resources/templates/products/edit.html
@@ -42,7 +42,7 @@
     <h2>Actualizar Producto</h2>
 
 
-    <form class="form-horizontal" th:action="@{/products/save}" method="post" enctype="multipart/form-data">
+    <form class="form-horizontal" th:action="@{/products/update}" method="post" enctype="multipart/form-data">
 
         <input id="id" type="hidden" name="id" th:value="${product.id}">
 
@@ -79,9 +79,9 @@
         </div>
 
         <div class="form-group">
-            <label class="control-label col-sm-2" for="image">Imagen:</label>
+            <label class="control-label col-sm-2" for="img">Imagen:</label>
             <div class="col-sm-10">
-                <input type="text" class="form-control-file" id="image" name="image" th:value="${product.image}">
+                <input type="file" class="form-control-file" id="img" name="img" th:value="${product.image}">
             </div>
         </div>
 
