--- a/src/main/resources/static/css/cards.css
+++ b/src/main/resources/static/css/cards.css
@@ -1,84 +1,70 @@
-@import url("https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap");
-
-* {
-  margin: 0;
-  padding: 0;
-  font-family: "Istok Web", sans-serif;
-}
-
 .card {
-  position: relative;
-  width: 320px;
-  height: 460px;
-  background: #ffffff;
-  border-radius: 20px;
-  overflow: hidden;
+    position: relative;
+    width: 320px;
+    height: 380px;
+    background: #ffffff;
+    border-radius: 20px;
+    overflow: hidden;
 }
-
-
-
-
-
-
 
 .card .imgBox {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding-top: 1px;
-  z-index: 1;
+    position: relative;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: -20px;
+    max-height: 300px;
+    min-height: 150px;
+    overflow: hidden;
+}
+
+.card .imgBox img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 10px;
 }
 
 .card .contentBox {
-  position: relative;
-  padding: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  z-index: 2;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    padding: 20px;
+    background: rgba(255, 255, 255, 0.8);
+    box-sizing: border-box;
 }
 
 .card .contentBox h3 {
-  font-size: 16px;
-  color: black;
-  font-weight: 500;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-}
-
-.card .contentBox .price {
-  font-size: 24px;
-  color: black;
-  font-weight: 700;
-  letter-spacing: 1px;
+    font-size: 16px;
+    color: black;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    margin-bottom: 50px;
 }
 
 .card .contentBox .show {
-  position: relative;
-  top: 100px;
-  opacity: 0;
-  padding: 10px 30px;
-  margin-top: 5px;
-  color: white;
-  text-decoration: none;
-  background: #28a745 ;
-  border-radius: 30px;
-  text-transform: uppercase;
-  letter-spacing: 1px;
-  transition: 0.5s;
+    position: relative;
+    top: -25px;
+    opacity: 0;
+    padding: 10px 30px;
+    margin-top: 2px;
+    color: white;
+    text-decoration: none;
+    background: #28a745;
+    border-radius: 30px;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    transition: 0.5s;
 }
 
 .card:hover .contentBox .show {
-  top: 0;
-  opacity: 1;
+    opacity: 1;
 }
 
 .img {
-  height: 300px;
-  width: auto;
-  max-width: 100%; /* Ajuste para que la imagen se adapte a la tarjeta */
+    height: 300px;
+    width: auto;
+    max-width: 100%;
 }
-
